# minigugl

./: .gitignore  .travis.yml  README.md  pyproject.toml  setup.cfg  sonar-project.properties
minigugl/: __init__.py  annotation.py  client.py  config.py  location.py  log.py
