[tool.poetry]
name = "minigugl"
description = "Video stream client for Raspberry Pi-powered dash cam"
version = "0.1.0"
license = "MIT"
authors = ["Frank Blechschmidt <contact@frank-blechschmidt.com>"]
readme = "README.md"
homepage = "https://github.com/FraBle/minigugl"
repository = "https://github.com/FraBle/minigugl"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: System :: Archiving :: Backup",
]
packages = [
    { include = "minigugl" },
]

[tool.poetry.dependencies]
python = ">=3.6.1, <3.8"
gps = { version = "^3.19", optional = true }
loguru = "^0.5.3"
vidgear = { git = "https://github.com/abhiTronix/vidgear.git", branch = "testing" }
pydantic = {extras = ["dotenv"], version = "^1.8.1"}
arrow = "^1.0.3"
# https://www.piwheels.org/project/opencv-contrib-python-headless/
opencv-contrib-python-headless = "4.4.0.46"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"
bandit = "^1.7.0"
dataclasses = {version = "^0.8", python = ">=3.6, <3.7"}
dodgy = "^0.2.1"
mypy = "^0.812"
safety = "^1.10.3"
wemake-python-styleguide = "^0.15.2"

[tool.poetry.extras]
gps = ["gps"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "piwheels"
url = "https://www.piwheels.org/simple/"
